# AMGSRN

./: .gitignore  README.md  env.yml  index.html  package-lock.json  package.json  profile.html  pyproject.toml  report_dynamo_export.sarif  results.xlsx  setup.py  trace.json  webpack.config.js
AMGSRN/: renderer.py  start_jobs.py  temp.py  test.py  test_compression.py  test_compressor.py  test_encoder_change.py  train.py
AMGSRN/BatchRunSettings/: test.json  test_baseline_comparison_large.json  test_baseline_comparison_medium.json  test_baseline_comparison_small.json  test_tv.json  train.json  train_baseline_comparison_medium.json  train_baseline_comparison_small.json  train_pytorch_v_cuda.json  train_tv.json
AMGSRN/CLI/: batch_run.py  bindings.py  run_renderer.py  train_inference.py
AMGSRN/Datasets/: datasets.py  download.sh  load_vtk.py  process_asteroid_data.py  process_mantle_data.py  process_wildfire_data.py  process_woodbranch.py  raw_to_nc.py  sample_vtk.py
AMGSRN/Models/: AMGSRN.py  AMGSRN_mutidecoder.py  AMGSRN_old.py  AMGSRN_pytorch.py  NGP.py  TVAMGSRN.py  ensemble_SRN.py  fVSRN.py  layers.py  models.py  options.py
AMGSRN/Other/: utility_functions.py  vis_charts.py  vis_io.py
AMGSRN/UI/: renderer_app.py  utils.py
AMGSRN/Visualizations/: vis_baseline_results.py  vis_comp_results.py  vis_comp_results_tv.py
Code/: temp.py  test.py  train.py
Code/BatchRunSettings/: asteroid_large.json  asteroid_large_test.json  asteroid_medium.json  asteroid_medium_test.json  feat_vect_length_exp.json  feat_vect_length_exp_test.json  feature_res_tradeoff.json  feature_res_tradeoff_test.json  grid_feat_tradeoff.json  grid_feat_tradeoff_test.json  supernova_medium.json  supernova_medium_test.json  test.json  test_new_AMGSRN.json  train.json  train_baseline_comparison_large.json  train_new_AMGSRN.json
Code/Datasets/: datasets.py
Code/Models/: AMGSRN.py  APMGSRN.py  NGP.py  models.py  options.py
Code/Other/: utility_functions.py
Colormaps/: Asteroid.json  Mantle.json
SavedModels/128feats_128grids/: model.ckpt.tar  options.json  test_log.txt  train_log.txt
SavedModels/16_16_16res_64feats/: options.json  test_log.txt  train_log.txt
SavedModels/16feats_128grids/: model.ckpt.tar  options.json  test_log.txt  train_log.txt
SavedModels/16grid_4feats/: options.json  test_log.txt  train_log.txt
SavedModels/1grid_64feats/: options.json  test_log.txt  train_log.txt
SavedModels/20_20_20res_32feats/: options.json  test_log.txt  train_log.txt
SavedModels/25_25_25res_16feats/: options.json  test_log.txt  train_log.txt
SavedModels/2grid_32feats/: options.json  test_log.txt  train_log.txt
SavedModels/32_32_32res_8feats/: options.json  test_log.txt  train_log.txt
SavedModels/32feats_128grids/: model.ckpt.tar  options.json  test_log.txt  train_log.txt
SavedModels/32grid_2feats/: options.json  test_log.txt  train_log.txt
SavedModels/40_40_40res_4feats/: options.json  test_log.txt  train_log.txt
SavedModels/4grid_16feats/: options.json  test_log.txt  train_log.txt
css/: style.css
html/: index.html
js/: app.js  index.js  process_files.js
shaders/: fragment.glsl  vertex.glsl
tools/: setup_env.ps1  setup_env.sh
(+160 files in other folders)
