[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AMGSRN"
version = "0.0.1"
description = "AMGSRN"
authors = [
    { name = "Skylar Wurster", email = "swwurster@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy==1.26.4",
    "torch==2.4.0",
    "torchvision==0.19.0",
    "tensorboard==2.17.1",
    "netCDF4==1.7.1.post2",
    "h5py==3.11.0",
    "vtk==9.3.1",
    
    # UI/renderer dependencies
    "nerfacc==0.5.3",
    "imageio==2.35.1",
    "opencv-python==4.10.0.84",
    "pyquaternion==0.9.9",
    "PyQt5==5.15.11",
    "superqt==0.6.7",
    "pyqtgraph==0.13.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.1"
]

[tool.pip]
extra-index-urls = [
    "https://download.pytorch.org/whl/cu124",
]