[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AMGSRN"
version = "0.0.1"
description = "AMGSRN"
authors = [
    { name = "Skylar Wurster", email = "swwurster@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy==1.26.4",
    "torch==2.4.1+cu124", 
    "torchvision==0.19.1+cu124",
    "tensorboard==2.17.1",
    "netCDF4==1.7.1.post2",
    "h5py==3.11.0",
    "vtk==9.3.1",
    "ninja==1.11.1.1",
    "onnx==1.16.2",
    "tensorrt==10.4.0",
]

[project.optional-dependencies]
renderer = [
    "imageio==2.35.1",
    "opencv-python==4.10.0.84",
    "pyquaternion==0.9.9",
    "PyQt5==5.15.11",
    "superqt==0.6.7",
    "pyqtgraph==0.13.7"
]
tcnn = [
    #"git+https://github.com/NVlabs/tiny-cuda-nn/#subdirectory=bindings/torch",
]

[tool.pip]
extra-index-urls = [
    "https://download.pytorch.org/whl/cu124",
]