[build-system]
requires = [
    "setuptools>=42",
     "wheel", 
     "torch"
     ]
build-backend = "setuptools.build_meta"

[project]
name = "AMGSRN"
version = "0.0.1"
description = "AMGSRN"
authors = [
    { name = "Skylar Wurster", email = "swwurster@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    # Training/testing dependencies
    "numpy==1.26.4",
    # "torch==2.4.1+cu124",         # pre-install torch
    # "torchvision==0.19.1+cu124",
    "tensorboard==2.17.1",
    "netCDF4==1.7.1.post2",
    "h5py==3.11.0",
    "vtk==9.3.1",
    "ninja==1.11.1.1",
    "pandas==2.2.3",
    "AMG_Encoder @ git+https://github.com/skywolf829/AMG_Encoder.git",
    # "tiny-cuda-nn @ git+https://github.com/NVlabs/tiny-cuda-nn/#subdirectory=bindings/torch"

    # Renderer depenencies
    "imageio==2.35.1",
    "opencv-python==4.10.0.84",
    "pyquaternion==0.9.9",
    "PyQt5==5.15.11",
    "superqt==0.6.7",
    "pyqtgraph==0.13.7",
    "nerfacc @ git+https://github.com/nerfstudio-project/nerfacc.git"
]

[tool.pip]
extra-index-urls = [
    "https://download.pytorch.org/whl/cu124",
]

[project.scripts]
amgsrn = "AMGSRN.CLI.train_inference:compress_decompress"
amgsrn-render = "AMGSRN.CLI.run_renderer:renderer"
amgsrn-renderer = "AMGSRN.CLI.run_renderer:renderer"
amgsrn-batch-run = "AMGSRN.CLI.batch_run:batch_run"
